force-app/main/default/objects/WL_OrderProduct2__c/WL_OrderProduct2__c.object-meta.xml
<CustomObject>
    <description>Order &amp; Product Junction 및 Price 정보 용 Custom Object</description>
    <label>WL_OrderProduct2</label>
    <nameField>
        <displayFormat>OP-{000000}</displayFormat>
        <label>Order Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WL_OrderProduct2s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>