force-app/main/default/objects/WL_OrderProduct2__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Product 할인율</description>
    <label>Discount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>