force-app/main/default/objects/WL_OrderProduct2__c/fields/ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalKey__c</fullName>
    <description>External Id로 사용할 복합키 저장 필드</description>
    <externalId>true</externalId>
    <label>ExternalKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>