force-app/main/default/objects/WL_OrderProduct2__c/fields/OrderProductNo__c.field-meta.xml
<CustomField>
    <fullName>OrderProductNo__c</fullName>
    <description>복합키 제조를 위한 필드</description>
    <displayFormat>OP-{000000}</displayFormat>
    <inlineHelpText>복합키 제조를 위한 필드</inlineHelpText>
    <label>OrderProductNo</label>
    <type>AutoNumber</type>
</CustomField>