force-app/main/default/objects/WL_OrderProduct2__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <description>Product 수익비</description>
    <inlineHelpText>Product 수익비</inlineHelpText>
    <label>Profit</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>