force-app/main/default/objects/WL_OrderProduct2__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>주문한 Product 개수</description>
    <inlineHelpText>주문한 Product 개수</inlineHelpText>
    <label>Quantity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>