force-app/main/default/objects/WL_OrderProduct2__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <description>Product 판매액</description>
    <inlineHelpText>Product 판매액</inlineHelpText>
    <label>Sales</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>