force-app/main/default/objects/WL_OrderProduct2__c/fields/WL_Order2__c.field-meta.xml
<CustomField>
    <fullName>WL_Order2__c</fullName>
    <description>Order 용 MD</description>
    <inlineHelpText>Order 용 MD</inlineHelpText>
    <label>WL_Order2</label>
    <referenceTo>WL_Orders2__c</referenceTo>
    <relationshipLabel>WL_OrderProduct2s</relationshipLabel>
    <relationshipName>WL_OrderProduct2s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>