force-app/main/default/objects/WL_OrderProduct2__c/fields/WL_Product2__c.field-meta.xml
<CustomField>
    <fullName>WL_Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product용 Lookup</description>
    <inlineHelpText>Product용 Lookup</inlineHelpText>
    <label>WL_Product2</label>
    <referenceTo>WL_Product2__c</referenceTo>
    <relationshipLabel>WL_OrderProduct2s</relationshipLabel>
    <relationshipName>WL_OrderProduct2s</relationshipName>
    <type>Lookup</type>
</CustomField>